Fix z-index by close modal window

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -702,6 +702,7 @@ header {
        font-size: 19px;
        color: $brand-color-text;
        cursor: pointer;
+       z-index: 9999;
      }
    }
 }
@@ -887,6 +888,7 @@ header {
     font-size: 19px;
     color: $brand-color-text;
     cursor: pointer;
+    z-index: 9999;
   }
 }
 
